[package]
name = "catacombs-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
once_cell = "1.17.1"
futures = "0.3.25"
proc-macro2 = "1.0.50"
quote = "1.0.23"
serde = { version = "1.0.152", features = ["derive"] }
syn = "1.0.107"
tokio = { version = "1.24.2", features = ["full"] }
catacombs-common= { path = "../catacombs-common" }
