[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catacombs-macros = {path = "../catacombs-macros"}
tokio = {version = "1.0", features = ["full"]}
once_cell = "1.17.1"
parking_lot = "0.11.1"
